message list y overflow fixed

--- a/app/assets/stylesheets/api/text_channel_messages.scss
+++ b/app/assets/stylesheets/api/text_channel_messages.scss
@@ -16,24 +16,32 @@
   position: relative;
   // border: 1px solid black;
   overflow-y: scroll;
+  overflow-x: hidden; 
+  display: flex; 
+  flex-direction: column-reverse;
   margin: 10px;
   width: calc(100% - 20px);
 }
 
 .text-channel-message-list {
+  position: relative;
   padding-top: 20px;
   padding-bottom: 10px;
+  width: calc(100% - 35px);
 }
 
 .text-channel-message-list > li {
   position: relative;
   margin-bottom: 1px;
   padding-right: 10px;
-  height: 28px;
+  width: 100%;
+  // height: 28px;
+  padding-top: 3px;
+  padding-bottom: 3px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   // border: 1px solid pink;
 }
 
@@ -42,13 +50,20 @@
 }
 
 .text-channel-message-list > li > p {
+  position: relative;
   line-height: 22px;
-  overflow-wrap: break-word;
 }
 
 .text-channel-message-list > li > p:first-of-type {
   margin-left: 12px;
   width: 80px;
+}
+
+.text-channel-message-list > li > p.pmessage {
+  width: calc(100% - 200px);
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
 }
 
 .message-settings {
@@ -154,7 +169,7 @@
 }
 
 .write-text-channel-chat > form {
-  height: calc(100% - 3px);
+  height: 36px;
   width: calc(100% - 78px);
   display: flex;
   justify-content: center;
